fix breaking layout on small screens

--- a/src/components/Sections/style.module.less
+++ b/src/components/Sections/style.module.less
@@ -48,6 +48,9 @@
 }
 
 .bodyText {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
   > :last-child {
     margin-bottom: 0;
   }
