--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -18,6 +18,10 @@ h2,
 h3 {
   font-size: 2rem;
   font-weight: normal;
+
+  @media (max-width: @breakPointM) {
+    hyphens: auto;
+  }
 }
 
 a {
